Working on the Storage API Update